[gd_scene load_steps=20 format=2]

[ext_resource path="res://images/tf2_loading_screen_crop.png" type="Texture" id=1]
[ext_resource path="res://audio/sfx/generic_door_open.mp3" type="AudioStream" id=2]
[ext_resource path="res://scripts/start_menu.gd" type="Script" id=3]
[ext_resource path="res://scripts/descriptions_on_off.gd" type="Script" id=4]
[ext_resource path="res://scripts/captions_on_off.gd" type="Script" id=5]
[ext_resource path="res://scripts/contact.gd" type="Script" id=6]
[ext_resource path="res://scripts/audio_stream_player2D_start.gd" type="Script" id=7]
[ext_resource path="res://scripts/AudioStreamPlayer_door.gd" type="Script" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/tf2build.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/tf2build.ttf"

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = SubResource( 4 )

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/tf2build.ttf"

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = SubResource( 11 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/tf2build.ttf"

[sub_resource type="DynamicFont" id=10]
size = 47
font_data = SubResource( 9 )

[node name="Node2D" type="Node2D"]

[node name="StartMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="StartMenu"]

[node name="TextureRect" type="TextureRect" parent="StartMenu/CanvasLayer"]
margin_left = -150.0
margin_right = 490.0
margin_bottom = 960.0
rect_scale = Vector2( 2.2, 2.2 )
texture = ExtResource( 1 )

[node name="RichTextLabel2" type="RichTextLabel" parent="StartMenu/CanvasLayer/TextureRect"]
margin_left = 100.0
margin_top = 817.0
margin_right = 290.0
margin_bottom = 855.0
theme = SubResource( 3 )
custom_colors/default_color = Color( 0.87451, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "v1.9999"
text = "v1.9999"
scroll_active = false

[node name="captions" type="Button" parent="StartMenu/CanvasLayer/TextureRect"]
margin_left = 110.0
margin_top = 200.0
margin_right = 490.0
margin_bottom = 270.0
theme = SubResource( 6 )
flat = true
script = ExtResource( 5 )

[node name="RichTextLabel_cap" type="RichTextLabel" parent="StartMenu/CanvasLayer/TextureRect/captions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -17.0
margin_right = 181.0
margin_bottom = 28.0
mouse_filter = 2
theme = SubResource( 8 )
custom_colors/default_color = Color( 0.87451, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "captions off"
meta_underlined = false
text = "captions off"
scroll_active = false

[node name="Descriptions" type="Button" parent="StartMenu/CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -180.0
margin_right = 210.0
margin_bottom = -120.0
theme = SubResource( 6 )
flat = true
script = ExtResource( 4 )

[node name="RichTextLabel_desc" type="RichTextLabel" parent="StartMenu/CanvasLayer/TextureRect/Descriptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = -26.0
margin_right = 225.0
margin_bottom = 27.0
mouse_filter = 2
theme = SubResource( 8 )
custom_colors/default_color = Color( 0.87451, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "DESCRIPTIONS off"
meta_underlined = false
text = "DESCRIPTIONS off"
scroll_active = false

[node name="contact" type="Button" parent="StartMenu/CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -80.0
margin_right = 210.0
margin_bottom = -20.0
theme = SubResource( 6 )
flat = true
script = ExtResource( 6 )

[node name="RichTextLabel_contact" type="RichTextLabel" parent="StartMenu/CanvasLayer/TextureRect/contact"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = -26.5
margin_right = 112.5
margin_bottom = 26.5
mouse_filter = 2
theme = SubResource( 8 )
custom_colors/default_color = Color( 0.87451, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "contact"
meta_underlined = false
text = "contact"
scroll_active = false

[node name="start" type="Button" parent="StartMenu/CanvasLayer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = 20.0
margin_right = 210.0
margin_bottom = 80.0
theme = SubResource( 6 )
flat = true

[node name="RichTextLabel_start" type="RichTextLabel" parent="StartMenu/CanvasLayer/TextureRect/start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.5
margin_top = -26.5
margin_right = 72.5
margin_bottom = 26.5
mouse_filter = 2
theme = SubResource( 8 )
custom_colors/default_color = Color( 0.87451, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "start
"
meta_underlined = false
text = "start
"
scroll_active = false

[node name="AudioStreamPlayer_start" type="AudioStreamPlayer" parent="."]
script = ExtResource( 7 )

[node name="AudioStreamPlayer_door" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
script = ExtResource( 8 )

[connection signal="pressed" from="StartMenu/CanvasLayer/TextureRect/captions" to="StartMenu/CanvasLayer/TextureRect/captions" method="_on_captions_pressed"]
[connection signal="pressed" from="StartMenu/CanvasLayer/TextureRect/captions" to="AudioStreamPlayer_start" method="_on_captions_pressed"]
[connection signal="pressed" from="StartMenu/CanvasLayer/TextureRect/Descriptions" to="StartMenu/CanvasLayer/TextureRect/Descriptions" method="_on_Descriptions_pressed"]
[connection signal="pressed" from="StartMenu/CanvasLayer/TextureRect/Descriptions" to="AudioStreamPlayer_start" method="_on_Descriptions_pressed"]
[connection signal="pressed" from="StartMenu/CanvasLayer/TextureRect/contact" to="StartMenu/CanvasLayer/TextureRect/contact" method="_on_contact_pressed"]
[connection signal="pressed" from="StartMenu/CanvasLayer/TextureRect/contact" to="AudioStreamPlayer_start" method="_on_contact_pressed"]
[connection signal="pressed" from="StartMenu/CanvasLayer/TextureRect/start" to="AudioStreamPlayer_door" method="_on_start_pressed"]
[connection signal="finished" from="AudioStreamPlayer_door" to="StartMenu" method="_on_AudioStreamPlayer_door_finished"]
